--- a/example/style.css
+++ b/example/style.css
@@ -1,2 +1,3 @@
 body { font-family: Verdana, Geneva, sans-serif; }
-pre { background-color: #000; color: #FFF; border-radius: 10px; padding: 25px 40px 15px 0; display: inline-block;}
+pre, code { text-align: left; }
+.container { max-width: 70%; margin: 0 auto; text-align: center; }
