--- a/example/style.css
+++ b/example/style.css
@@ -1,3 +1,7 @@
 body { font-family: Verdana, Geneva, sans-serif; }
 pre, code { text-align: left; }
 .container { max-width: 70%; margin: 0 auto; text-align: center; }
+
+// Event listener example
+.event-listener .main-heading { color: red; }
+.event-listener .main-heading.ready { color: yellowgreen; }
