--- a/example/sass/style.scss
+++ b/example/sass/style.scss
@@ -11,7 +11,38 @@ pre, code { text-align: left; }
 .header {
   background-color: #0ea6a4;
   width: 100%;
-  padding: 10px;
+  margin: 0;
+  padding: 15px;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-flex-direction: column;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-flex-wrap: nowrap;
+      -ms-flex-wrap: nowrap;
+          flex-wrap: nowrap;
+  -webkit-justify-content: flex-start;
+  -ms-flex-pack: start;
+  justify-content: flex-start;
+  box-sizing: border-box;
+  -webkit-flex-shrink: 0;
+    -ms-flex-negative: 0;
+          flex-shrink: 0;
+  width: 100%;
+  border: none;
+  background-color: rgb(63,81,181);
+  color: rgb(255,255,255);
+  box-shadow: 0 2px 2px 0 rgba(0,0,0,.14),0 3px 1px -2px rgba(0,0,0,.2),0 1px 5px 0 rgba(0,0,0,.12);
+  transition-duration: .2s;
+  transition-timing-function: cubic-bezier(.4,0,.2,1);
+  transition-property: max-height,box-shadow;
+
+  a {
+    color: #FFF;
+    text-decoration: none;
+  }
+}
 }
 .list {
   margin: 0;
