--- a/example/sass/style.scss
+++ b/example/sass/style.scss
@@ -1,6 +1,11 @@
+@import url(https://fonts.googleapis.com/css?family=Roboto:400,100);
 @import 'monokai-sublime';
 
-body { font-family: Verdana, Geneva, sans-serif; margin: 0; }
+body {
+  font-family: "Roboto","Helvetica","Arial",sans-serif;
+  margin: 0;
+  background-color: #EFEFEF;
+}
 pre, code { text-align: left; }
 .container { max-width: 70%; margin: 0 auto; text-align: center; }
 
