--- a/example/sass/style.scss
+++ b/example/sass/style.scss
@@ -1,6 +1,7 @@
 @import url(https://fonts.googleapis.com/css?family=Roboto:400,100);
 @import 'monokai-sublime';
 
+@import 'config';
 body {
   font-family: "Roboto","Helvetica","Arial",sans-serif;
   margin: 0;
