--- a/example/sass/style.scss
+++ b/example/sass/style.scss
@@ -50,36 +50,35 @@ pre, code { text-align: left; }
 }
 
 .btn {
-  background: rgb(63,81,181);
-  color: rgb(255,255,255);
-  border: none;
+  display: block;
+  color: #FFF;
+  background-color: $primary-light-blue;
   border-radius: 2px;
-  color: #000;
   position: relative;
-  margin: 0 5px 5px 0;
-  padding: 0 16px;
-  font-family: "Roboto","Helvetica","Arial",sans-serif;
+  font-family: 'Roboto', 'Helvetica', 'Arial', sans-serif;
   font-size: 14px;
   font-weight: 500;
   text-transform: uppercase;
-  letter-spacing: 0;
-  overflow: hidden;
-  will-change: box-shadow;
-  box-shadow: 0 2px 2px 0 rgba(0,0,0,.14),0 3px 1px -2px rgba(0,0,0,.2),0 1px 5px 0 rgba(0,0,0,.12);
-  transition: box-shadow .2s cubic-bezier(.4,0,1,1),background-color .2s cubic-bezier(.4,0,.2,1),color .2s cubic-bezier(.4,0,.2,1);
-  outline: none;
-  cursor: pointer;
   text-decoration: none;
   text-align: center;
   line-height: 36px;
+  letter-spacing: 0;
+  overflow: hidden;
+  will-change: box-shadow;
+  box-shadow: $box-shadow;
+  transition: box-shadow 0.2s cubic-bezier(0.4, 0, 1, 1),
+              background-color 0.2s cubic-bezier(0.4, 0, 0.2, 1),
+              color 0.2s cubic-bezier(0.4, 0, 0.2, 1);
+  outline: none;
+  cursor: pointer;
   vertical-align: middle;
 
   &:hover {
-    background: rgba(63,81,181, 0.9);
+    background-color: rgba($primary-light-blue, 0.9);
   }
 }
 .heading {
-  font-family: "Roboto","Helvetica","Arial",sans-serif;
+  font-family: 'Roboto', 'Helvetica', 'Arial', sans-serif;
 
   &.main-heading {
     margin: 1.75rem 0;
@@ -90,27 +89,49 @@ pre, code { text-align: left; }
 .section {
   padding: 5.625rem 1.25rem;
 }
+
 .list {
   margin: 0;
   padding: 0;
-  display: flex;
-  -webkit-justify-content: space-between;
-          justify-content: space-between;
+
+  @media screen and (min-width: $mobile) {
+    display: flex;
+    -webkit-justify-content: space-between;
+            justify-content: space-between;
+  }
 }
 .horizontal-list {
+
   li {
-    float: left;
-    display: table;
-    width: 250px;
-    height: 250px;
+    position: relative;
+    @media screen and (min-width: $mobile) {
+      display: table-cell;
+      margin: 0 5px 5px 0;
+    }
   }
   a {
-    display: table-cell;
-    vertical-align: middle;
-    width: 100%;
-    height: 100%;
     color: #FFF;
+    padding: 20px 0;
+    margin: 0 0 5px 0;
+    display: block;
     text-decoration: none;
     box-sizing: border-box;
+    @extend .btn;
+    line-height: normal;
+
+    @media screen and (min-width: $mobile) {
+      display: table-cell;
+      width: 250px;
+      height: 250px;
+    }
+
+    span {
+      @media screen and (min-width: $mobile) {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+      }
+    }
   }
 }
