--- a/example/sass/style.scss
+++ b/example/sass/style.scss
@@ -79,6 +79,11 @@ pre, code {
   cursor: pointer;
   vertical-align: middle;
 
+  &.btn-standard {
+    display: inline-block;
+    padding: 0 15px;
+  }
+
   &:hover {
     background-color: rgba($primary-light-blue, 0.9);
   }
